--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
 <div class="pic">
     <img class="real-pic" src="daniel.jpg" alt="daniel" width="400px" height="400px">
 </div>
+
+<div class="pookie-bare-140">
+    <h1>Daniel Pus kunne bare 140 deadlift før!😨😨😨😨</h1>
+
+</div>
+<div class="kg140">
+    <video loop autoplay muted class="løft-140" src="pookie140.mov" height="50%" width="50%"></video>
+</div>
+
+<div class="men-nå">
+    <h1>men nå kan Pus ta 160KG DEADLIFT!!!!😈😈😈😱😱😱</h1>
+</div>
+
+<div class="kg160">
+    <video loop autoplay muted class="løft-140" src="pookie160.mov" height="50%" width="50%"></video>
+</div>
+
+<div class="stolt-txt">
+    <h1>jeg er stolt av deg Pus 😊😊😊😊😊</h1>
+</div>
+
+<div class="stolt-pic">
+    <img class="solte-pic" src="daniel-pus-stolt.jpg" alt="stolt daniel" width="1000px" height="400px">
+</div>
+
+<div class="blad-ned">
+    <h2>blad ned for mer 🥰🥰🥰</h2>
+
+</div>
     
 </body>
 </html>
