--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     <h2>blad ned for mer 🥰🥰🥰</h2>
 
 </div>
+
+<audio controls autoplay loop class="song">
+    <source src="Katy Perry - Last Friday Night (T.G.I.F) [Lyrics] [ ezmp3.cc ].mp3" type="audio/mpeg">
+  </audio>
     
 </body>
 </html>
